[package]
name = "refold"
version = "0.1.2"
edition = "2021"

license = "GPL-2.0-or-later"
repository = "https://github.com/wr7/refold"
description = "A command-line utility for wrapping text"
keywords = ["fold", "wrap", "line_wrapping"]
categories = ["command-line-utilities"]

[dependencies]
argtea = "1.0.0"
textwrap = { version = "0.16.1", default-features = false, features = ["smawk", "unicode-linebreak"] }
